# paparazzi

./: .gitignore  README.md
OpenCV/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  depth_est  main.cpp
conf/: Makefile.linux  Makefile.nps  abi.xml
conf/airframes/tudelft/: bebop_course_orangeavoid.xml  bebop_course_orangeavoid_guided.xml  bebop_mav_course_exercise.xml  group12_avoider.xml  splash4.xml
conf/flight_plans/tudelft/: group12_avoider.xml
conf/modules/: bebop_cam.xml  depth_extraction.xml  gps_datalink.xml  guidance_rotorcraft.xml  ins_ekf2.xml  mav_course_exercise.xml  orange_avoider_guided.xml  potential_field_avoider.xml
conf/userconf/tudelft/: conf.xml  course_conf.xml
python-vision/: README.md  potentialGoal.py
sw/airborne/modules/computer_vision/: depth_estimate.cpp  depth_estimate.h  depth_extraction.c  depth_extraction.h  opencv_example.cpp  opencv_example.h  opencv_image_functions.cpp
sw/airborne/modules/computer_vision/opticflow/: opticflow_calculator_dense.c
sw/airborne/modules/core/: abi_sender_ids.h
sw/airborne/modules/gps/: gps_datalink.c  gps_datalink.h  gps_ubx.c
sw/airborne/modules/ins/: ins_ekf2.cpp  ins_ekf2.h
sw/airborne/modules/mav_course_exercise/: mav_exercise.c
sw/airborne/modules/orange_avoider/: motion_primitive_avoider.c  motion_primitive_avoider.h  orange_avoider.c  orange_avoider_guided.c  potential_field_avoider.c  potential_field_avoider.h
sw/ground_segment/python/natnet3.x/: natnet2ivy.py
